# Project-Drone_Simulation

./: README.md  package.xml  setup.py
config/: cartographer_config.yaml  display.rviz  drone.yaml  rtabmap_config.yaml
drone_simulation/: control.py  drone_control.py  spawn_drone.py  teleop_control.py
include/drone_simulation/: plugin_drone.h  plugin_drone_private.h
launch/: cartographer_launch.py  control.launch.py  drone_launch.py  dronecontrol.py  flooddrone.launch.py  gazebo.launch.py  robot_state_publisher.py  rtabmap_launch.py  rviz.launch.py  try.launch.py  world_launch.py
models/drone_again/: drone_again.sdf
urdf/: Drone again.csv  city.urdf  drone_again.urdf  drone_again.urdf.xacro  drone_sensors.xacro
world/: flooded_city.world  flooded_city_with_drone.world
